nested menu added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,34 @@
     <link rel="stylesheet" href="ascet/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="home.html">HOME</a></li>
+                <li>
+                    <a href="blog.html">BLOG</a>
+                    <ul class="dropdown">
+                        <li><a href="home.html">HOME</a></li>
+                        <li><a href="blog.html">BLOG</a></li>
+                        <li>
+                            <a href="www.facebook.com">CONTACT</a>
+                            <ul class="dropdown">
+                                <li><a href="home.html">HOME</a></li>
+                                <li><a href="blog.html">BLOG</a></li>
+                                <li><a href="www.facebook.com">CONTACT</a></li>
+                                <li><a href="hirepage.html">HIRE</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="hirepage.html">HIRE</a></li>
+                    </ul>
+                </li>
+                <li><a href="www.facebook.com">CONTACT</a></li>
+                <li><a href="hirepage.html">HIRE</a></li>
+            </ul>
+        </nav>
+    </header>
     <table>
-        <caption>Employee slaary </caption>
+        <caption>Employee slaary</caption>
         <thead>
             <tr>
                 <th>No.</th>
@@ -49,6 +75,5 @@
             </tr>
         </tfoot>
     </table>
-    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
 </body>
 </html>
