--- a/index.html
+++ b/index.html
@@ -75,5 +75,22 @@
             </tr>
         </tfoot>
     </table>
+    <a href="/ascet/image/images (1).jfif"> photo</a><br>
+    <input type="text"><br>
+    <input type="gmail"><br>
+    <input type="password"><br>
+    <ul class="bonus">
+        <li>roki</li>
+        <li>thor</li>
+        <li>hulk</li>
+        <li>mam</li>
+        <li>captain</li>
+        <li>loki</li>
+        <li>tho</li>
+        <li>ame</li>
+        <li>dr</li>
+        <li>paper</li>
+    </ul>
+    
 </body>
 </html>
